// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main render main outside grommet wrapper 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 0 auto;
  height: 100%;
  overflow: auto;
}

<main
  class="c0"
/>
`;

exports[`Main should have no accessibility violations 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 0 auto;
  height: 100%;
  overflow: auto;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div>
  <div
    class="c0"
  >
    <main
      class="c1"
    />
  </div>
</div>
`;
